--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,9 +3,10 @@
 <head>
 	<title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"
+	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
 </head>
 <body>
 <h1>Elizah Hulseman</h1>
-<p id="slogan"> Personal Portfolio</p>
+<h3 id="slogan">Personal Portfolio</h3>
 </body>
 </html>
