--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
 </head>
 <body>
-<h1>Elizah Hulseman</h1>
+<h1 class="heading">Elizah Hulseman</h1>
 <h3 id="slogan">Personal Portfolio</h3>
 </body>
 </html>
