--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,7 +6,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
 </head>
 <body>
-<h1 class="heading">Elizah Hulseman</h1>
+<h1 id="heading">Elizah Hulseman</h1>
 <h3 id="slogan">Personal Portfolio</h3>
+  <div id="hello">
+  <button class="fixedwidthbutton">Portfolio</button>
+  <button class="fixedwidthbutton">Contact Me</button>
+  </div>
 </body>
 </html>
