--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css"
-	<link href="https://fonts.googleapis.com/css?family=Bungee+Shade" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Raleway|Raleway+Dots" rel="stylesheet">
+
 </head>
 <body>
 <h1 id="heading">Elizah Hulseman</h1>
