--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,9 +6,20 @@
 	<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Quicksand|Raleway|Raleway+Dots" rel="stylesheet">
 </head>
 <body>
-<h1 id="heading">Elizah Hulseman</h1>
-<h3 id="slogan">Personal Portfolio</h3>
-  <div id="hello">
+<h1>Elizah Hulseman</h1>
+<p id="slogan">Personal Portfolio</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<ul>
+<li>Graphic Design</li>
+<li>Product Design</li>
+<li>Website Design</li>
+</ul>
+  <div>
   <button class="fixedwidthbutton">Portfolio</button>
   <button class="fixedwidthbutton">Contact Me</button>
   </div>
