--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Shade|Quicksand|Raleway|Raleway+Dots" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700" rel="stylesheet">
 </head>
 <body>
 <h1>Elizah Hulseman</h1>
