--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -21,5 +21,6 @@ consequat.</p>
   <button class="fixedwidthbutton">Portfolio</button>
   <button class="fixedwidthbutton">Contact Me</button>
   </div>
+  <a href="mailto:ehulseman@gmail.com">ehulseman@gmail.com</a>
 </body>
 </html>
