--- a/practice/index.html
+++ b/practice/index.html
@@ -8,16 +8,17 @@
 
 <body>
  
-  <section id=logo>
+  <div id=logo>
   <h1 id="title">Elizah Hulseman</h1>
   <h2 id="subtitle">Personal Portfolio</h2>
   <div class="homepagebutton">
   <button class="homepagebutton">Portfolio</button>
   <button class="homepagebutton">Contact Me</button>
   </div>
-  </section>
+  </div>
  
 
+<!--
   <nav>
   <a href="#">Elizah Hulseman</a>
   <a href="#">Home</a>
@@ -74,6 +75,7 @@
   <p class="copyright">© 2016 Elizah Hulseman</p>
 </footer>
 
+-
 </body>
 
 </html>
