--- a/practice/index.html
+++ b/practice/index.html
@@ -11,7 +11,7 @@
   <div id=logo>
   <h1 id="title">Elizah Hulseman</h1>
   <h2 id="subtitle">Personal Portfolio</h2>
-  <div class="homepagebutton">
+  <div class="homepagebuttoncontainer">
   <button class="homepagebutton">Portfolio</button>
   <button class="homepagebutton">Contact Me</button>
   </div>
