--- a/practice/index.html
+++ b/practice/index.html
@@ -8,13 +8,12 @@
 
 <body>
  
-  <div id=logo>
   <h1 id="title">Elizah Hulseman</h1>
   <h2 id="subtitle">Personal Portfolio</h2>
-  <div class="homepagebuttoncontainer">
-  <button class="homepagebutton">Portfolio</button>
-  <button class="homepagebutton">Contact Me</button>
-  </div>
+  
+  <div id="homepagebuttoncontainer">
+  <button id="homepagebutton">Portfolio</button>
+  <button id="homepagebutton">Contact Me</button>
   </div>
  
 
