--- a/practice/index.html
+++ b/practice/index.html
@@ -8,14 +8,14 @@
 
 <body>
  
+ <section id="hero">
   <h1 id="title">Elizah Hulseman</h1>
   <h2 id="subtitle">Personal Portfolio</h2>
-  
   <div id="homepagebuttoncontainer">
   <button id="homepagebutton">Portfolio</button>
   <button id="homepagebutton">Contact Me</button>
   </div>
- 
+ </section>
 
 <!--
   <nav>
