--- a/practice_2/index.html
+++ b/practice_2/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700|Raleway" rel="stylesheet">
 </head>
 <body>
 
@@ -15,6 +15,6 @@
   <button class="fixedwidthbutton">Portfolio</button>
   <button class="fixedwidthbutton">Contact Me</button>
   </div>
-  
+
 </body>
 </html>
