--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -3,77 +3,18 @@
 <head>
 	<title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700|Raleway" rel="stylesheet">
 </head>
-
 <body>
- 
-  <section id=logo>
-  <h1 id="title">Elizah Hulseman</h1>
-  <h2 id="subtitle">Personal Portfolio</h2>
-  <div class="homepagebutton">
-  <button class="homepagebutton">Portfolio</button>
-  <button class="homepagebutton">Contact Me</button>
+
+<h1>Elizah Hulseman</h1>
+
+<p id="slogan">Personal Portfolio</p>
+
+  <div>
+  <button class="fixedwidthbutton">Portfolio</button>
+  <button class="fixedwidthbutton">Contact Me</button>
   </div>
-  </section>
- 
-
-  <nav>
-  <a href="#">Elizah Hulseman</a>
-  <a href="#">Home</a>
-  <a href="#">Portfolio</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>
-  </nav>
-  
-
-  <section id="recentwork">
-  <h3>Recent Work</h3>
-  <h3>Load More</h3>
-  </section>
-  
-
-  <nav>
-  <a href="#">Elizah Hulseman</a>
-  <a href="#">Home</a>
-  <a href="#">Portfolio</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>
-  </nav>
-
-
-  <section id="about">
-  <h3>About</h3>
-  <p>Live in Portsmouth, NH. Went to the University of Edinburgh. Love Coffee. Speak Italian. Have two cats. Home owner.<p/> 
-  <h3>Skills</h3>
-  <p>Currently employed at B2W Software as a Product Manager.</p> 
-  </section>
-
-
-  <nav>
-  <a href="#">Elizah Hulseman</a>
-  <a href="#">Home</a>
-  <a href="#">Portfolio</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>
-  </nav>
-
-
-<section id="getintouch">
-  <h3>Get in Touch</h3>
-  <h4>or email me directly <a href="mailto:ehulseman@gmail.com">here</a>.</h4>
-  </section>
-
-  <p><a href="#">Go to top</a></p>
-
-<footer>
-  <a href="#">Home</a>
-  <a href="#">Portfolio</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>	
-  <p class="copyright">© 2016 Elizah Hulseman</p>
-</footer>
 
 </body>
-
 </html>
