--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -7,73 +7,87 @@
 </head>
 
 <body>
- 
-  <section id=logo>
-  <h1 id="title">Elizah Hulseman</h1>
-  <h2 id="subtitle">Personal Portfolio</h2>
-  <div class="homepagebutton">
-  <button class="homepagebutton">Portfolio</button>
-  <button class="homepagebutton">Contact Me</button>
-  </div>
-  </section>
+ <div class="wrapper">
+
+ <header id="logo">
+  <h1>HEADER: Elizah Hulseman</h1>
+  <h2>Personal Portfolio</h2>
+ <div class="homepagebutton">
+  <button>Portfolio</button>
+  <button>Contact Me</button>
+ </div>
+ </header>
  
 
-  <nav>
+ <nav>
+  <h1>NAV</h1>
   <a href="#">Elizah Hulseman</a>
   <a href="#">Home</a>
   <a href="#">Portfolio</a>
   <a href="#">About</a>
   <a href="#">Contact</a>
-  </nav>
+ </nav>
   
 
-  <section id="recentwork">
+ <section id="recentwork">
+  <h1>SECTION 1</h1>
   <h3>Recent Work</h3>
   <h3>Load More</h3>
-  </section>
+ </section>
   
 
-  <nav>
+ <nav>
+  <h1>NAV</h1>
   <a href="#">Elizah Hulseman</a>
   <a href="#">Home</a>
   <a href="#">Portfolio</a>
   <a href="#">About</a>
   <a href="#">Contact</a>
-  </nav>
+ </nav>
 
 
-  <section id="about">
+ <section id="about">
+  <h1>SECTION TWO</h1>
   <h3>About</h3>
   <p>Live in Portsmouth, NH. Went to the University of Edinburgh. Love Coffee. Speak Italian. Have two cats. Home owner.<p/> 
   <h3>Skills</h3>
   <p>Currently employed at B2W Software as a Product Manager.</p> 
-  </section>
+ </section>
 
 
-  <nav>
+ <nav>
+  <h1>NAV</h1>
   <a href="#">Elizah Hulseman</a>
   <a href="#">Home</a>
   <a href="#">Portfolio</a>
   <a href="#">About</a>
   <a href="#">Contact</a>
-  </nav>
+ </nav>
 
 
-<section id="getintouch">
+ <section id="getintouch">
+  <h1>SECTION THREE</h1>
   <h3>Get in Touch</h3>
   <h4>or email me directly <a href="mailto:ehulseman@gmail.com">here</a>.</h4>
-  </section>
-
   <p><a href="#">Go to top</a></p>
+ </section>
 
-<footer>
+ 
+ <footer>
+ <h1>FOOTER</h1>
+  <nav>
   <a href="#">Home</a>
   <a href="#">Portfolio</a>
   <a href="#">About</a>
   <a href="#">Contact</a>	
+  </nav>
+  <section id="copyright"
   <p class="copyright">© 2016 Elizah Hulseman</p>
-</footer>
+  </section>
+ </footer>
 
-</body>
+ </div>
 
-</html>
+ </body>
+
+ </html>
