--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -51,7 +51,7 @@
   <h3>About</h3>
   <p>Live in Portsmouth, NH. Went to the University of Edinburgh. Love Coffee. Speak Italian. Have two cats. Home owner.<p/> 
   <h3>Skills</h3>
-  <p>Currently employed at B2W Software as a Product Manager.</p> 
+  <p>Product Management; UX Design; Agile Methodology.</p> 
  </section>
 
 
