--- a/unit_5 copy/index.html
+++ b/unit_5 copy/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Oswald|Quicksand|Raleway+Dots|Raleway:300,400" rel="stylesheet">
 </head>
 
 <body>
