--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -7,66 +7,70 @@
 </head>
 
 <body>
- <div class="wrapper">
+  <div class="wrapper">
 
- <header id="logo">
-  <h1>HEADER: Elizah Hulseman</h1>
-  <h2>Personal Portfolio</h2>
- <div class="homepagebutton">
-  <button>Portfolio</button>
-  <button>Contact Me</button>
- </div>
- </header>
+    <header id="logo">
+      <h1>HEADER: Elizah Hulseman</h1>
+      <h2>Personal Portfolio</h2>
+      <div class="homepagebutton">
+        <button>Portfolio</button>
+        <button>Contact Me</button>
+      </div>
+      </header>
  
 
- <nav>
-  <h1>NAV</h1>
-  <a href="#">Elizah Hulseman</a>
-  <a href="#">Home</a>
-  <a href="#">Portfolio</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>
- </nav>
+    <nav>
+      <a href="#">Elizah Hulseman</a>
+      <a href="#">Home</a>
+      <a href="#">Portfolio</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
   
 
- <section id="recentwork">
-  <h1>SECTION 1</h1>
-  <h3>Recent Work</h3>
-  <h3>Load More</h3>
- </section>
-  
+    <section id="recentwork">
+      <h3>SECTION ONE: Recent Work</h3>
+      <figure class="work">
+      <img src="http://placehold.it/100x100">
+      <figcaption>Some Text</figcaption>
+      </figure>
 
- <section id="about">
-  <h1>SECTION TWO</h1>
-  <h3>About</h3>
-  <p>Live in Portsmouth, NH. Went to the University of Edinburgh. Love Coffee. Speak Italian. Have two cats. Home owner.<p/> 
-  <h3>Skills</h3>
-  <p>Product Management; UX Design; Agile Methodology.</p> 
- </section>
+      <figure class="work">
+      <img src="http://placehold.it/100x100">
+      <figcaption>Some Text</figcaption>
+      </figure>
+
+      <figure class="work">
+      <img src="http://placehold.it/100x100">
+      <figcaption>Some Text</figcaption>
+      </figure>
+      <h3>Load More</h3>
+    </section>
 
 
- <section id="getintouch">
-  <h1>SECTION THREE</h1>
-  <h3>Get in Touch</h3>
-  <h4>or email me directly <a href="mailto:ehulseman@gmail.com">here</a>.</h4>
-  <p><a href="#">Go to top</a></p>
- </section>
+    <section id="about">
+      <h3>SECTION TWO: About</h3>
+      <p>I live on the seacoast in New Hampshire. Graduated at the University of Edinburgh in 2013. The proud owner of two Ragamese kitties. New home owner and landlord.<p/> 
+      <h3>Skills</h3>
+      <p>Product Management; UX Design; Agile Methodology.</p> 
+    </section>
+
+
+    <section id="getintouch">
+      <h3>SECTION THREE: Get in Touch</h3>
+      <h4>or email me directly <a href="mailto:ehulseman@gmail.com">here</a>.</h4>
+      <p><a href="#">Go to top</a></p>
+    </section>
 
  
- <footer>
- <h1>FOOTER</h1>
-  <nav>
-  <a href="#">Home</a>
-  <a href="#">Portfolio</a>
-  <a href="#">About</a>
-  <a href="#">Contact</a>	
-  </nav>
-  <section id="copyright"
-  <p class="copyright">© 2016 Elizah Hulseman</p>
-  </section>
- </footer>
+    <footer>
+      <h1>FOOTER</h1>
+      <section id="copyright"
+      <p class="copyright">© 2016 Elizah Hulseman</p>
+      </section>
+    </footer>
 
- </div>
+    </div>
 
  </body>
 
