--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -1,49 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Elizah Hulseman</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Elizah Hulseman</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Bungee|Bungee+Inline|Bungee+Shade|Quicksand:400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Raleway:300,400" rel="stylesheet">
 </head>
 
 <body>
-  <div class="wrapper">
 
-    <header id="logo">
-      <h1>Elizah Hulseman</h1>
-      <h2>Personal Portfolio</h2>
-      <div class="homepagebutton">
-        <button>Portfolio</button>
-        <button>Contact Me</button>
-      </div>
-      </header>
- 
-
+  <header id="logo">
+    <h1>Elizah Hulseman</h1>
+    <h2>Personal Portfolio</h2>
     <nav>
-      <a href="#">Elizah Hulseman</a>
-      <a href="#">Home</a>
       <a href="#">Portfolio</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
     </nav>
-  
+  </header>
+ 
 
-    <section id="recentwork" class="clearfix">
-      <h3>Recent Work</h3>
+  <section id="recentwork" class="clearfix">
+    <h3>Recent Work</h3>
       
-      <div id="left">
+    <div id="left">
       <figure class="work">
       <img src="http://placehold.it/200x250">
       <figcaption>Some Text</figcaption>
       </figure>
-      </div>
+    </div>
 
-      <div id="middle">
+    <div id="middle">
       <figure class="work">
       <img src="http://placehold.it/200x250">
       <figcaption>Some Text</figcaption>
       </figure>
-      </div>
+    </div>
 
       <div id="right">
       <figure class="work">
@@ -89,8 +81,6 @@
       <p class="copyright">© 2016 Elizah Hulseman</p>
       </section>
     </footer>
-
-    </div>
 
  </body>
 
