--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Elizah Hulseman</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Raleway:300,400" rel="stylesheet">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Elizah Hulseman</title>
+	 <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link href="https://fonts.googleapis.com/css?family=Josefin+Slab|Raleway:300,400" rel="stylesheet">
+   <!--[if lt IE 9]>
+      <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+   <![endif]-->
 </head>
 
 <body>
 
-  <header id="logo">
-    <h1>Elizah Hulseman</h1>
-    <h2>Personal Portfolio</h2>
+  <div id="lander">
+    <header>
+     <h1>Elizah Hulseman</h1>
+     <h2>Personal Portfolio</h2>
+    </header>
     <nav>
       <a href="#">Portfolio</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
     </nav>
-  </header>
+  </div>
  
 
   <section id="recentwork" class="clearfix">
@@ -44,7 +49,6 @@
       </figure>
       </div>
 
-      <h3>Load More</h3>
     </section>
 
 
