--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -23,6 +23,7 @@
       <a href="#">About</a>
       <a href="#">Contact</a>
     </nav>
+    <button id="hamburger">Menu</button>
   </div>
  
 
@@ -55,8 +56,10 @@
 
     <section id="about" class="clearfix">
       <div id="left">
+      <div class="inner">
       <h3>About</h3>
       <p>I live on the seacoast in New Hampshire. Graduated at the University of Edinburgh in 2013. The proud owner of two Ragamese kitties. New home owner and landlord.<p/> 
+      </div>
       </div>
 
      <div id="middle">
@@ -67,8 +70,10 @@
       </div>
 
       <div id="right">
+      <div class="inner">
       <h3>Skills</h3>
       <p>Product Management; UX Design; Agile Methodology.</p> 
+      </div>
       </div>
     </section>
 
